# neura-reth

./: .gitignore  Cargo.toml  build_errors.txt  errors.txt  multiple  neura_qbft_build_log.txt  neura_qbft_build_log_v6.txt  referencelibraries  test_errors.txt
crates/chain-state/: Cargo.toml
crates/chain-state/src/: chain_info.rs
crates/consensus/common/: Cargo.toml
crates/consensus/common/src/: lib.rs
crates/engine/tree/src/tree/: mod.rs
crates/era-downloader/src/: stream.rs
crates/era-utils/: Cargo.toml
crates/era-utils/tests/it/: history.rs
crates/ethereum/evm/src/: test_utils.rs
crates/ethereum/node/: Cargo.toml
crates/evm/evm/src/: lib.rs
crates/neura/: IMPLEMENTATION_PLAN.md
crates/neura-consensus-qbft/: Cargo.toml  build_errors.txt  test_errors.txt
crates/neura-consensus-qbft/src/: lib.rs
crates/neura-qbft/: Cargo.toml  test_errors.txt
crates/neura-qbft/src/: IMPLEMENTATION_PLAN.md  error.rs  lib.rs  testing_helpers.rs
crates/neura-qbft/src/consensus/: height_controller.rs  mod.rs
crates/neura-qbft/src/messagedata/: mod.rs  qbft_v1.rs
crates/neura-qbft/src/messagewrappers/: bft_message.rs  commit.rs  mod.rs  prepare.rs  prepared_certificate.rs  proposal.rs  round_change.rs
crates/neura-qbft/src/mocks/: mock_block_creator.rs  mock_final_state.rs  mock_timers.rs  mock_validator_factory.rs  mod.rs
crates/neura-qbft/src/payload/: commit_payload.rs  message_factory.rs  mod.rs  prepare_payload.rs  prepared_round_metadata.rs  proposal_payload.rs  round_change_payload.rs
crates/neura-qbft/src/state/: mod.rs  round_state.rs  round_state_tests.rs
crates/neura-qbft/src/statemachine/: qbft_block_height_manager.rs  qbft_controller.rs  qbft_round.rs  round_change_manager.rs  round_state.rs
crates/neura-qbft/src/types/: block.rs  block_creator.rs  extra_data.rs  header.rs  mod.rs  qbft_final_state.rs  rlp_signature.rs  signed_data.rs
crates/neura-qbft/src/validation/: commit_validator.rs  message_validator.rs  message_validator_factory.rs  mod.rs  prepare_validator.rs  proposal_validator.rs  round_change_message_validator.rs  round_change_message_validator_factory.rs
crates/neura-qbft/src/validation/tests/: commit_validator_tests.rs  common_helpers.rs  prepare_validator_tests.rs  proposal_validator_tests.rs  round_change_message_validator_tests.rs
crates/neura/neura-consensus-qbft/: Cargo.toml  build_errors.txt  test_errors.txt
crates/neura/neura-consensus-qbft/src/: consensus.rs  error.rs  lib.rs  services.rs  test_utils.rs
crates/neura/neura-engine-types/: Cargo.toml
crates/neura/neura-engine-types/src/: lib.rs
crates/neura/neura-node/: Cargo.toml  build_errors.txt
crates/neura/neura-node/src/: lib.rs
crates/neura/neura-payload-builder/: Cargo.toml  test_errors.txt
crates/neura/neura-payload-builder/src/: lib.rs
crates/neura/neura-payload-types/: Cargo.toml  test_errors.txt
crates/neura/neura-payload-types/src/: lib.rs
crates/neura/neura-qbft/: test_errors.txt
crates/neura/neura-qbft-core/: Cargo.toml  build_errors.txt  test_errors.txt
crates/neura/neura-qbft-core/src/messagewrappers/: bft_message.rs  prepare.rs  proposal.rs
crates/neura/neura-qbft-core/src/mocks/: mock_services.rs
crates/neura/neura-qbft-core/src/payload/: message_factory.rs
crates/neura/neura-qbft-core/src/statemachine/: mod.rs  qbft_block_height_manager.rs  qbft_controller.rs  qbft_round.rs  round_change_manager.rs  round_state.rs
crates/neura/neura-qbft-core/src/types/: block_importer.rs  consensus_round_identifier.rs  extra_data.rs  mod.rs  qbft_final_state.rs  rlp_signature.rs
crates/neura/neura-qbft-core/src/validation/: commit_validator.rs  message_validator_factory.rs  mod.rs
crates/neura/neura-qbft-core/src/validation/tests/: prepare_validator_tests.rs  proposal_validator_tests.rs
crates/neura/neura-qbft/src/: IMPLEMENTATION_PLAN.md  lib.rs
crates/neura/neura-qbft/src/consensus/: height_controller.rs
crates/neura/neura-qbft/src/messagewrappers/: commit.rs  prepared_certificate.rs  round_change.rs
crates/neura/neura-qbft/src/mocks/: mock_validator_factory.rs
crates/neura/neura-qbft/src/payload/: proposal_payload.rs  qbft_payload.rs
crates/neura/neura-qbft/src/state/: height_state.rs  round_state_tests.rs
crates/neura/neura-qbft/src/statemachine/: qbft_block_height_manager.rs  qbft_controller.rs  round_state.rs
crates/neura/neura-qbft/src/types/: block.rs  block_creator.rs  block_importer.rs  extra_data.rs
crates/neura/neura-qbft/src/validation/: prepare_validator.rs  proposal_validator.rs  round_change_message_validator.rs  round_change_message_validator_factory.rs
crates/neura/neura-qbft/src/validation/tests/: commit_validator_tests.rs  common_helpers.rs  mod.rs  round_change_message_validator_tests.rs
crates/qbft-consensus/: Cargo.toml  README.md
crates/qbft-consensus/src/: chain_spec.rs  consensus.rs  engine.rs  lib.rs  node.rs
crates/rpc/rpc-builder/src/: lib.rs
examples/custom-beacon-withdrawals/src/: main.rs
examples/custom-evm/src/: main.rs
examples/precompile-cache/src/: main.rs
examples/qbft-node/: Cargo.toml  config.rs  config.toml  main.rs
examples/qbft-node/src/: main.rs
