[package]
name = "neura_consensus_qbft"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
neura_qbft_core = { path = "../neura-qbft" }

# Reth dependencies
reth-consensus = { workspace = true }
reth-consensus-common = { workspace = true }
reth-primitives = { workspace = true, default-features = true }
reth-primitives-traits = { workspace = true }
reth-provider = { workspace = true, features = ["test-utils"] }
reth-db = { workspace = true }
reth-db-api = { workspace = true }
reth-node-api = { workspace = true }
reth-node-builder = { workspace = true }
alloy-primitives = { workspace = true }
alloy-consensus = { workspace = true }
alloy-eips = { version = "0.15.10", default-features = false }
reth-chainspec = { workspace = true }

# Other common dependencies
tracing = "0.1"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
k256 = { workspace = true }
rand_08 = { package = "rand", version = "0.8.5" } 