[package]
name = "neura_qbft_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = { workspace = true, features = ["rlp", "serde"] } # Removed geth-signer
alloy-rlp = { version = "0.3.11", features = ["derive"] }    # For RLP encoding/decoding derive macros
k256 = { workspace = true } # Inherit k256 fully from workspace
ecdsa = { version = "0.16", features = ["signing", "verifying"] } # Direct, not in workspace.dependencies
sha3 = "0.10" # Keccak256 is part of this
chrono = "0.4"
log = "0.4"
thiserror = "1.0"
bytes = "1.5" # If alloy-primitives doesn't cover all Bytes needs directly
serde = { version = "1.0", features = ["derive"], optional = true } # Made optional
rand = "0.8"
reth-primitives = { workspace = true }

# For development, consider:
# env_logger = "0.9"

[dev-dependencies]
# rand = "0.8" # Moved to [dependencies]
# alloy-rlp-derive = "0.1.0" # No longer explicitly needed if alloy-rlp brings it in via "derive" feature
# Other dev dependencies...
# tokio = { version = "1", features = ["full"] } # Example, if async tests are needed

[features]
default = []
serde = ["dep:serde", "alloy-primitives/serde"] # Enable serde for this crate and alloy-primitives    

# Example feature for integration tests or specific configurations
# integration-tests = []

# Ensure that if you use workspace dependencies with features, you handle them appropriately.
# e.g., if a workspace dependency has optional features you need, you might need to re-declare them. 