[package]
name = "reth-qbft-consensus"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "QBFT consensus implementation for Reth."

[lints]
workspace = true

[dependencies]
# reth
reth-consensus-common = { path = "../consensus/common" }
reth-primitives-traits.workspace = true
reth-engine-primitives.workspace = true
reth-chainspec.workspace = true
reth-consensus.workspace = true
reth-execution-types.workspace = true
reth-node-api.workspace = true
reth-node-builder.workspace = true
reth-payload-primitives.workspace = true

# ethereum
alloy-primitives.workspace = true
alloy-consensus.workspace = true

# async
async-trait.workspace = true

# misc
derive_more.workspace = true
eyre.workspace = true

alloy-rpc-types-engine = { workspace = true }
futures = "0.3"
parking_lot = "0.12"
reth-ethereum-primitives = { workspace = true }
reth-provider = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = "0.1"

[dev-dependencies]
reth-testing-utils = { workspace = true } 