[package]
name = "qbft-node"
version = "0.1.0"
edition = "2021"

[dependencies]
reth-node-builder = { path = "../../crates/node/builder" }
reth-qbft-consensus = { path = "../../crates/qbft-consensus" }
reth-chainspec = { path = "../../crates/chainspec" }
alloy-primitives = { version = "0.1.0", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.4", features = ["derive"] }
serde_with = "3.4" 