[package]
name = "neura-consensus-qbft"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
neura-qbft-core = { workspace = true, features = ["mocks"] }

# Reth dependencies
reth-consensus = { workspace = true }
reth-consensus-common = { workspace = true }
reth-primitives = { workspace = true, default-features = true }
reth-primitives-traits = { workspace = true }
reth-provider = { workspace = true, features = ["test-utils"] }
reth-db = { workspace = true }
reth-db-api = { workspace = true }
reth-node-api = { workspace = true }
reth-node-builder = { workspace = true }
alloy-primitives = { workspace = true }
alloy-consensus = { workspace = true }
alloy-eips = { version = "0.15.10", default-features = false }
reth-chainspec = { workspace = true }

# Other common dependencies
tracing = "0.1"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
k256 = { workspace = true, features = ["ecdsa"] }
rand_08 = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
# REMOVED neura-qbft-core from here
# Add reth-ethereum-primitives for constants
reth-ethereum-primitives = { workspace = true, features = ["serde"] }
reth-stages = { workspace = true, features = ["test-utils"] }
alloy-rlp = { workspace = true }

[features]
# ... existing features ... 