[package]
name = "neura-engine-types"
version = "0.1.0" # Assuming initial version
edition = "2021" # Assuming current edition
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
reth-payload-primitives = { workspace = true }
reth-primitives-traits = { workspace = true }
reth-ethereum-engine-primitives = { workspace = true }
reth-ethereum-primitives = { workspace = true } # For reth_ethereum_primitives::Block
alloy-rpc-types-engine = { workspace = true }
serde = { workspace = true, features = ["derive"] }

neura-payload-types = { path = "../neura-payload-types" }

# Added for EngineTypes trait if NeuraEngineTypes needs to implement it
reth-engine-primitives = { workspace = true } 
alloy-rpc-types-eth = { workspace = true } # For ExecutionPayloadV1 etc.
alloy-eips = { workspace = true } # For various EIPs if needed for conversions

[features]
default = ["std"]
std = [
    "reth-payload-primitives/std",
    "reth-primitives-traits/std",
    "reth-ethereum-engine-primitives/std",
    "reth-ethereum-primitives/std",
    "alloy-rpc-types-engine/std",
    "reth-engine-primitives/std",
    "alloy-rpc-types-eth/std",
    "alloy-eips/std",
    "serde/std",
] 