[package]
name = "neura-node"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Neura crates
neura-engine-types = { path = "../neura-engine-types" }
neura-payload-builder = { path = "../neura-payload-builder" }
neura-payload-types = { path = "../neura-payload-types" } # Needed for NeuraBuiltPayloadWithDetails in trait bounds
neura-consensus-qbft = { path = "../neura-consensus-qbft" } # For QbftConsensus

# Reth crates for node building
reth-node-api = { workspace = true }
reth-node-builder = { workspace = true }
reth-chainspec = { workspace = true }
reth-consensus = { workspace = true }
reth-errors = { workspace = true }
reth-ethereum-primitives = { workspace = true } # For EthPrimitives
reth-trie-db = { workspace = true } # For MerklePatriciaTrie
reth-provider = { workspace = true } # For EthStorage
reth-evm = { workspace = true } # For ConfigureEvm
reth-transaction-pool = { workspace = true } # For TransactionPool
reth-ethereum-payload-builder = { workspace = true } # For EthereumBuilderConfig

# Other
eyre = { workspace = true }
k256 = { workspace = true, features = ["ecdsa"] }
rand = { workspace = true }

[features]
default = ["std"]
std = [
    "reth-chainspec/std",
    "reth-consensus/std",
    "reth-errors/std",
    "reth-ethereum-primitives/std",
    "reth-evm/std",
    "k256/std",
    "rand/std",
] 